--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,68 @@
 cmake_minimum_required(VERSION 3.10)
 
 # 项目名称
-project(SendMultipartRequest)
+project(EUTIL)
 
-# C++17标准
+# 使用与框架相同的C++标准
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# 添加严格编译选项 (与框架一致)
+if(UNIX AND NOT APPLE)
+    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -z defs -pthread -Wwrite-strings")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+endif()
+
+# 使用环境变量定义基础路径
+if(DEFINED ENV{BM2_BASE_DIR})
+    set(BM2_BASE_DIR $ENV{BM2_BASE_DIR})
+    message(STATUS "Using BM2_BASE_DIR from environment: ${BM2_BASE_DIR}")
+else()
+    message(WARNING "BM2_BASE_DIR environment not set")
+endif()
+
+# 设置数据库和中间件类型 (与框架一致)
+set(IPLAT4C_MIDDLEWARE_TYPE "ixt")
+set(IPLAT4C_DATABASE_TYPE "db2")
+set(IPLAT4C_BUILD_TYPE "${IPLAT4C_MIDDLEWARE_TYPE}${IPLAT4C_DATABASE_TYPE}")
+
 # 所有源文件
 set(SOURCES
-    sendMultipartRequest.cpp      # ⬅️ 建议把 sendMultipartRequest 单独放在这里
-    MultipartRequestBuilder.cpp
+    sendMultipartRequest.cpp
+    multipartRequestBuilder.cpp
     FileUtil.cpp
-    EIClassBuilder.cpp
     EcodeUtil.cpp
+    EIClassBuilder.cpp     
     JsonParser.cpp
+    jsonRequestBuilder.cpp
 )
 
-# 包含头文件目录
+# 包含头文件目录 (添加框架所需路径)
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
+    ${BM2_BASE_DIR}/Include
+    $ENV{DB2_HOME}/include
+    $ENV{IMTOP_HOME}/include
     /usr/include
     /usr/local/include
-    /ixtop/ixtop4/include
-    /BSMesWare/BMBKM0/Include
 )
 
-# 链接目录
+# 链接目录 (添加框架所需路径)
 link_directories(
-    /BSMesWare/BMBKM0/Build/ixtdb2/Lib
+    ${BM2_BASE_DIR}/Build/ixtdb2/Lib
+    $ENV{DB2_HOME}/lib
+    $ENV{IMTOP_HOME}/lib
+    $ENV{IMTOP_HOME}/px/lib
     /usr/lib64
     /home/db2inst1/sqllib/lib
-    /ixtop/ixtop4/lib
+    /usr/local/lib64
 )
 
-# 创建共享库
-add_library(SendMultipartRequest SHARED ${SOURCES})
 
-# 链接外部库
-target_link_libraries(SendMultipartRequest
+add_library(EUTIL SHARED ${SOURCES})
+
+# 链接外部库 (添加框架所需库)
+target_link_libraries(EUTIL
     bm2data
     bm2db
     bm2ei
@@ -46,8 +70,40 @@ target_link_libraries(SendMultipartRequest
     bm2log
     bm2cache
     bm2model
+    bm2trsc
     crypto
+    dl
+    pthread
+    db2
+    jsoncpp
 )
 
-# 可选: 安装规则
-# install(TARGETS SendM
+
+# jsoncpp --
+# 查找 jsoncpp 包
+# find_package(JsonCpp REQUIRED)
+
+# # 检查找到的版本
+# message(STATUS "JsonCpp version: ${JsonCpp_VERSION}")
+#--
+
+# 添加框架的宏定义
+# target_compile_definitions(EUTIL PRIVATE
+#     _NOT_EMBEDDED_
+#     _IMTOP_
+#     _DB2_
+# )
+
+# 设置运行时库路径
+if(UNIX AND NOT APPLE)
+    set_target_properties(EUTIL PROPERTIES
+        INSTALL_RPATH "$ORIGIN"
+        BUILD_WITH_INSTALL_RPATH TRUE
+    )
+endif()
+
+
+# 打印 JSONCPP 信息用于调试
+message(STATUS "JSONCPP found: ${JSONCPP_VERSION}")
+message(STATUS "  Include dirs: ${JSONCPP_INCLUDE_DIRS}")
+message(STATUS "  Libraries: ${JSONCPP_LIBRARIES}")
